# MAS-final

./: README.md  run_containers.sh  stop_containers.sh
database-API/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  populate_data.py
database-API/src/: database.rs  error.rs  main.rs
database-API/src/controllers/: address_controller.rs  cargo_controller.rs  carriage_controller.rs  client_controller.rs  driver_controller.rs  mod.rs  trailer_controller.rs  truck_controller.rs
database-API/src/entities/: address.rs  cargo.rs  carriage.rs  client.rs  driver.rs  employee.rs  mod.rs  trailer.rs  truck.rs
database-API/src/utils/: mod.rs
frontend/: .env  Dockerfile  angular.json  custom-webpack.config.js  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: crud-operation.ts  index.html  proxy.conf.json
here-API/: .gitignore  docker-compose.yml  go.mod  go.sum  init.js  main.go
here-API/client/: api_client.go
here-API/config/: setup.go
here-API/controllers/: geocoding_controller.go  geocoding_controller_test.go  routing_controller.go  routing_controller_test.go
here-API/errors/: errors.go
here-API/mocks/: here_api.go  mock_HereAPI.go
here-API/models/: geocoding.go  routing.go
here-API/routes/: here_route.go
routing-backend/: .env  Dockerfile  go.mod  go.sum  init.js  main.go
routing-backend/client/: api_client.go
routing-backend/config/: env.go
routing-backend/controllers/: geocoding_controller.go
routing-backend/errors/: errors.go
routing-backend/middleware/: logger.go
(+92 files in other folders)
