[package]
name = "database-API"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.40"
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24.3"
actix-rt = "2.8.0"
